<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/donwknow"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:src="@drawable/logo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textstyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="19sp"
                android:textColor="@color/Gray"
                android:textColorHint="@color/White"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textstyle"
                android:hint="@string/password"
                android:textColor="@color/Gray"
                android:textColorHint="@color/White"
                android:inputType="textPassword"
                android:textSize="19sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:background="@drawable/button_login_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:textSize="15sp"
            android:text="@string/login"
            />
        <com.facebook.login.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn_loginFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FacebookLoginButton"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_loginGmail"
            android:background="@drawable/button_login_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:textSize="15sp"
            android:text="@string/login_gmail"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/createAccount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/createOne"
                android:textColor="@color/Blue"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>